# UCLAhealth-DevOps-AppEngineering

./: .gitignore  6-6-Interview-Report.pptx  HenrikMoe (1).docx  OpenTofu.txt  README.md  TerrraformAssignmentRequirments.txt  cidr.txt  globalVars.yaml  pymazeNotes.py  terraformSimple.yaml
TerraformAssignment/: .terraform.lock.hcl  README.md  main.tf  terraform.tfstate  terraform.tfstate.backup
TerraformAssignment/ParentModule/: main.tf  output.tf  variables.tf
TerraformAssignment/ResourceNamingModule/: main.tf  output.tf  variables.tf
interview_service/: Cargo.toml
interview_service/src/: csv.rs  interfaces.rs  main.rs  structs.rs
